fixing some spacing in hero component

--- a/client/src/app/landing/hero/hero.component.scss
+++ b/client/src/app/landing/hero/hero.component.scss
@@ -7,12 +7,12 @@
   display: flex;
   flex-direction: column;
   align-items: flex-end;
-  justify-content: flex-start;
+  justify-content: center;
   gap: 12.8rem;
   height: 100%;
 
   &__heading {
-    margin: 9.6rem 12.8rem 0 0;
+    margin: 0 12.8rem 0 0;
 
     &-icon-container {
       display: inline-block;
